# Scotty3D

./: .gitignore  CMakeLists.txt  README.md  runcmake_win.bat  win_clean.bat
CMU462/: CMakeLists.txt  README.md
CMU462/docs/: CMakeLists.txt  Doxyfile  mainpage.md
CMU462/docs/html/: _c_m_u462_8h_source (Sky_MBP's conflicted copy 2015-10-06).html  _c_m_u462_8h_source.html  annotated (Sky_MBP's conflicted copy 2015-10-06).html  annotated.html  base64_8h_source (Sky_MBP's conflicted copy 2015-10-06).html  base64_8h_source.html  class_c_m_u462_1_1_color (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_color-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_color-members.html  class_c_m_u462_1_1_color.html  class_c_m_u462_1_1_color__coll__graph.map  class_c_m_u462_1_1_color__coll__graph.md5  class_c_m_u462_1_1_complex (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_complex-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_complex-members.html  class_c_m_u462_1_1_complex.html  class_c_m_u462_1_1_complex__coll__graph.md5  class_c_m_u462_1_1_complex__inherit__graph.map  class_c_m_u462_1_1_matrix3x3 (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_matrix3x3-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_matrix3x3-members.html  class_c_m_u462_1_1_matrix3x3.html  class_c_m_u462_1_1_matrix3x3__coll__graph.map  class_c_m_u462_1_1_matrix3x3__coll__graph.md5  class_c_m_u462_1_1_matrix4x4 (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_matrix4x4-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_matrix4x4-members.html  class_c_m_u462_1_1_matrix4x4.html  class_c_m_u462_1_1_matrix4x4__coll__graph.map  class_c_m_u462_1_1_matrix4x4__coll__graph.md5  class_c_m_u462_1_1_o_s_d_text (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_o_s_d_text-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_o_s_d_text-members.html  class_c_m_u462_1_1_o_s_d_text.html  class_c_m_u462_1_1_renderer (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_renderer-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_m_u462_1_1_renderer-members.html  class_c_m_u462_1_1_renderer.html  class_c_m_u462_1_1_spectrum-members.html  class_c_m_u462_1_1_spectrum.html  (+102 more)
CMU462/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js
CMU462/examples/: CMakeLists.txt  event.cpp  template.cpp  text.cpp  triangle.cpp
CMU462/include/CMU462/: CMU462.h  color.h  complex.h  console.h  matrix3x3.h  matrix4x4.h  misc.h  osdtext.h  quaternion.h  renderer.h  spectrum.h  timer.h  vector2D.h  vector3D.h  vector4D.h  viewer.h
CMU462/src/: CMakeLists.txt  color.cpp  complex.cpp  matrix3x3.cpp  matrix4x4.cpp  osdfont.cpp  osdtext.cpp  quaternion.cpp  spectrum.cpp  vector2D.cpp  vector3D.cpp  vector4D.cpp  viewer.cpp
CMU462/tests/: CMakeLists.txt  osd.cpp
media/animation/: human.dae
media/meshedit/: banana.dae  bean.dae  beetle.dae  building.dae  cow.dae  crazy_torus.dae  cube.dae  dodecahedron.dae  grid.dae  hex.dae  maxplanck.dae  peter.dae  quadball.dae  teapot.dae  torus.dae
media/pathtracer/: cubeWithLight.dae
media/pathtracer/advanced/: bunny.dae
media/pathtracer/basic/: carim_diffuse.dae  carim_glass.dae  carim_mirror.dae  floating.dae  plane1024.dae  plane16384.dae  plane4.dae  plane64.dae  sphere7_diffuse.dae  sphere7_glass.dae  sphere7_mirror.dae  sphere_diffuse.dae  sphere_glass.dae  sphere_mirror.dae  trigs1.dae  trigs10.dae  trigs5.dae
media/pathtracer/reference_results/: performance.txt
media/pathtracer/sky/: CBbunny.dae  CBcoil.dae  CBempty.dae  CBgems.dae  CBspheres.dae  CBspheres_lambertian.dae
result/: Command Argument.txt
result/Pathtracer/: data.txt
result/Pathtracer/Task 4/: data.txt
result/Pathtracer/Task 5/: data.txt
result/Pathtracer/Task 6/: data.txt
result/Pathtracer/Task 7/: data.txt
result/Pathtracer/Task6/: data.txt
result/Pathtracer/Task7/: data.txt
result/Pathtracer/Until Task 4/: data.txt
src/: CMakeLists.txt  application.cpp  application.h  bbox.cpp  bbox.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  camera.cpp  camera.h  error_dialog.cpp  error_dialog.h  getopt.c  getopt.h  gl_errors.h  halfEdgeMesh.cpp  halfEdgeMesh.h  image.h  intersection.h  main.cpp  meshEdit.cpp  meshEdit.h  mutablePriorityQueue.h  pathtracer.cpp  pathtracer.h  ray.h  sampler.cpp  sampler.h  spline.h  spline.inl  timeline.cpp  timeline.h  work_queue.h
src/collada/: camera_info.cpp  camera_info.h  collada.cpp  collada.h  collada_info.h  light_info.cpp  light_info.h  material_info.cpp  material_info.h  polymesh_info.cpp  polymesh_info.h  sphere_info.cpp  sphere_info.h
src/dynamic_scene/: ambient_light.h  area_light.h  directional_light.h  draw_style.h  environment_light.h  joint.cpp  joint.h  material.h  mesh.cpp  mesh.h  point_light.h  scene.cpp  scene.h  skeleton.cpp  skeleton.h  sphere.cpp  sphere.h  spot_light.h  widgets.cpp  widgets.h
src/misc/: sphere_drawing.cpp  sphere_drawing.h
src/static_scene/: aggregate.h  environment_light.cpp  environment_light.h  light.cpp  light.h  object.cpp  object.h  primitive.h  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
